fix(ai-help): avoid input overlap with send icon

--- a/client/src/plus/ai-help/index.scss
+++ b/client/src/plus/ai-help/index.scss
@@ -252,7 +252,7 @@
       height: var(--form-elem-height);
       margin: 0.5rem;
       padding-left: 1rem;
-      padding-right: 1rem;
+      padding-right: 3rem;
       width: calc(100% - 1rem);
     }
   }
